deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-todo-publisher
  namespace: ha-todo-publisher
spec:
  selector:
    app: ha-todo-publisher
  ports:
    - name: http
      port: 80
      targetPort: http
